switch to jekyll, add team page

--- a/index.html
+++ b/index.html
@@ -1,66 +1,52 @@
-<!doctype html>
-<html class="no-js" lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Locus</title>
+---
+layout: default
+---
 
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+<div class="expanded row locus_page-header">
+  <div class="small-12 medium-offset-3 medium-6 columns text-center">
+    <img src="{{site.baseurl}}/img/logo-locus.png" width="100%">
+  </div>
+</div>
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway|Roboto">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.0/css/foundation.min.css">
-    <link rel="stylesheet" href="css/custom.css">
-  </head>
-  <body>
+<br>
 
-    <div class="expanded row locus_page-header">
-      <div class="small-12 medium-offset-3 medium-6 columns text-center">
-        <img src="img/logo-locus.png" width="100%">
-      </div>
+<div class="row">
+  <div class="medium-offset-2 medium-8 columns text-center">
+    <h5>What is Locus?</h5>
+    <p>An open source, 3D printed, mapping drone in collaboration with MSF Japan. <br>Help support the project via <a class="secondary" href="https://www.kickstarter.com/projects/1445938395/locus-open-source-drone-msf" targer="_blank">Kickstarter</a>.</p>
+  </div>
+</div>
+
+<br>
+
+<div class="row">
+  <div class="medium-offset-2 medium-8 columns text-center">
+    <h5>Meet the team</h5>
+    <p>Locus started as a collaboration between five students at The Hague University and Médecins Sans Frontières (MSF) Japan. <a class="secondary" href="{{site.baseurl}}/team" target="_blank">Meet</a> the team that started it and then get in touch to become part of the project!</p>
+  </div>
+</div>
+
+<br>
+
+<div class="row locus_contact">
+  <div class="columns text-center">
+    <h5>Follow us</h5>
+    <div class="button-group stacked-for-small">
+        <a class="locus_btn-white button hollow" href="https://twitter.com/locus_msf" target="_blank"><i class="fa fa-fw fa-twitter"></i></a>
+        <a class="locus_btn-white button hollow" href="https://www.instagram.com/locus.msf/" target="_blank"><i class="fa fa-fw fa-instagram"></i></a>
+        <a class="locus_btn-white button hollow" href="https://www.facebook.com/locusmsf" target="_blank"><i class="fa fa-fw fa-facebook-f"></i></a>
     </div>
+  </div>
+</div>
 
-    <br>
+<br>
 
-    <div class="row">
-      <div class="medium-offset-2 medium-8 columns text-center">
-        <h5>What is Locus?</h5>
-        <p>An open source, 3D printed, mapping drone in collaboration with MSF Japan. <br>Help support the project via <a class="secondary" href="https://www.kickstarter.com/projects/1445938395/locus-open-source-drone-msf" targer="_blank">Kickstarter</a>.</p>
-      </div>
-    </div>
+<div class="row">
+  <div class="columns text-center">
+    <h5>More updates soon</h5>
+  </div>
+</div>
 
-    <br>
+<br>
 
-    <div class="row locus_contact">
-      <div class="columns text-center">
-        <h5>Follow us:</h5>
-        <div class="button-group stacked-for-small">
-            <a class="locus_btn-white button hollow" href="https://twitter.com/locus_msf" target="_blank"><i class="fa fa-fw fa-twitter"></i></a>
-            <a class="locus_btn-white button hollow" href="https://www.instagram.com/locus.msf/" target="_blank"><i class="fa fa-fw fa-instagram"></i></a>
-            <a class="locus_btn-white button hollow" href="https://www.facebook.com/locusmsf" target="_blank"><i class="fa fa-fw fa-facebook-f"></i></a>
-        </div>
-      </div>
-    </div>
-
-    <br>
-
-    <div class="row">
-      <div class="columns text-center">
-        <h5>More updates soon.</h5>
-      </div>
-    </div>
-
-    <br>
-
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/what-input/4.0.6/what-input.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.0/js/foundation.min.js"></script>
-    <script src="https://use.fontawesome.com/eb154e6e77.js"></script>
-    <script>
-      $(document).foundation();
-    </script>
-  </body>
-</html>
+<div style="height:60px;"></div>
