internal page link shouln't open a new tab

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ layout: default
 <div class="row">
   <div class="medium-offset-2 medium-8 columns text-center">
     <h5>Meet the team</h5>
-    <p>Locus started as a collaboration between five students at The Hague University and Médecins Sans Frontières (MSF) Japan. <a class="secondary" href="{{site.baseurl}}/team" target="_blank">Meet</a> the team that started it and then get in touch to become part of the project!</p>
+    <p>Locus started as a collaboration between five students at The Hague University and Médecins Sans Frontières (MSF) Japan. <a class="secondary" href="{{site.baseurl}}/team">Meet</a> the team that started it and then get in touch to become part of the project!</p>
   </div>
 </div>
 
